--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button_webview">WebView Test</string>
+    <string name="title_activity_webview">WebviewActivity</string>
 </resources>
