AOP: refine click events to remove aspectj dependencies.
1. add click events demo and test case in demox.
2. refine runtime library and RuntimeBridge.

Signed-off-by: Peng Wang <wangpeng@thinkingdata.cn>

--- a/demox/src/main/res/values/strings.xml
+++ b/demox/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="title_activity_click_test">ClickTestActivity</string>
     <string name="button_click">Click test</string>
     <string name="button_timepicker">Select Time</string>
+    <string name="button_multichoice_dialog">Test MultiChoice Dialog</string>
+    <string name="title_multi_choice">MultiChoice Dialog</string>
 </resources>
